feat(lambda-fusion-ai): 支持挂起式用户输入交互(HITL 单选/多选/文本)
- 新增 externalTool 交互工具 ask_single_choice/ask_multi_choice/ask_text_input 与 InterruptFactory(生成 input_required interrupt 及 responseSchema)

- 事件链路: AgentEventMapper 映射挂起事件并抑制 RUNNING 态占位结果; AgentExecutionAdapter 识别 REQUIRE_EXTERNAL_EXECUTION 边界裁剪并暴露 readSuspendedToolBlocks

- 快照投影: pendingInputs 投影与 AWAITING_INPUT 工具状态; 实例状态机泛化为 awaitingInteraction; bootstrap 重连重建输入 interrupt

- 恢复链路: SubmitToolInput DTO、ToolInputValidator 三方一致+responseSchema 校验、POST /runs/{runId}/input 端点; ChatRun 视图暴露 pendingInputs

- 适配 agentscope 2.0.1: 移除已废弃的 KubernetesFilesystemSpec.image() 调用

- 新增 ChatRunCoordinatorInputTest 覆盖挂起/提交/取消/重启恢复链路(全量 219 测试通过)